--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   just_audio: ^0.10.5
   audio_service: ^0.18.18
   on_audio_query_pluse: ^3.0.6
+  sqflite: ^2.4.2
+  path: ^1.9.1
   skeletonizer: ^2.1.2
   flutter_launcher_icons: ^0.14.4
   flutter_native_splash: ^2.4.7
